--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly("org.flywaydb:flyway-database-postgresql:11.7.2")
 
+    
+    runtimeOnly("com.h2database:h2")
+
     implementation("org.apache.commons:commons-csv:1.14.0")
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.1'
