--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,4 +5,8 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true 
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=1B
+spring.servlet.multipart.max-request-size=1B
