--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,13 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.4'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'com.google.cloud.tools.jib' version '3.4.5'
+}
+
+jib {
+    to {
+        image = 'csv-import-app'
+    }
 }
 
 group = 'com.tedtalks'
@@ -24,11 +31,12 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly("org.flywaydb:flyway-database-postgresql:11.7.2")
-
+    implementation 'io.micrometer:micrometer-registry-prometheus'
     
     runtimeOnly("com.h2database:h2")
 
